--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Site daora demais</title>
+    <title>Portifólio Pedro</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
             <div>
                 <h1>Olá,<span></span></h1>
                 <h1>meu nome é<span></span></h1>
-                <h1>Pedro<span></span></h1>
+                <h1>Pedro Carvalho<span></span></h1>
                 <a href="#portfolio" type="button" class="cta">Portifólio</a>
             </div>
         </div>
@@ -28,7 +28,7 @@
             <div class="all-projects">
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Projeto 1</h1>
+                        <h1>Projetos</h1>
                         <h2>Codar é daora</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
                             aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
@@ -41,7 +41,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Projeto 2</h1>
+                        <h1>Experiência</h1>
                         <h2>Codar é vida</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
                             aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
@@ -54,7 +54,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Projeto 3</h1>
+                        <h1>Formação</h1>
                         <h2>Codar é amor</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
                             aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
@@ -67,7 +67,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Projeto 4</h1>
+                        <h1>Outras informações</h1>
                         <h2>Codar é gostoso demais</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
                             aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
