--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Experiência</h1>
-                        <h2>Codar é vida</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
+                        <h2>Minha trajetória</h2>
+                        <p>Lorem ipvvvsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
                             aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
                             ipsum. In consectetur, leo a accumsan eleifend, tortor leo eleifend nunc, sed pulvinar neque
                             urna vitae dui.</p>
