mudança linha 52 html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Formação</h1>
-                        <h2>Codar é amor</h2>
+                        <h2>faculdade e cursos</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
                             aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
                             ipsum. In consectetur, leo a accumsan eleifend, tortor leo eleifend nunc, sed pulvinar neque
